--- a/front-end/tutorial-canciones/src/app/cancion/cancion-detail/cancion-detail.component.html
+++ b/front-end/tutorial-canciones/src/app/cancion/cancion-detail/cancion-detail.component.html
@@ -64,4 +64,32 @@
         </div>
     </div>
 
+    <div class="row">
+
+      <div class="col-12 mt-3 mb-2 ms-2">
+          <h2>Compartido con</h2>
+      </div>
+
+      <div class="col-12">
+          <table mat-table [dataSource]="cancion.compartidos" class="mat-elevation-z8" *ngIf="cancion.compartidos.length > 0" summary="Lista de usuarios">
+a
+              <!-- Position Column -->
+              <ng-container matColumnDef="index">
+                  <th mat-header-cell *matHeaderCellDef scope="col"> No. </th>
+                  <td mat-cell *matCellDef="let element; let i = index;" scope="row"> {{i + 1}} </td>
+              </ng-container>
+
+              <!-- Name Column -->
+              <ng-container matColumnDef="nombre">
+                  <th mat-header-cell *matHeaderCellDef scope="col"> Usuario </th>
+                  <td mat-cell *matCellDef="let element" scope="row"> {{ element }} </td>
+              </ng-container>
+
+              <tr mat-header-row *matHeaderRowDef="displayedColumnsCompartidos"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumnsCompartidos;; let i = index"></tr>
+
+          </table>
+      </div>
+  </div>
+
 </ng-template>
