--- a/front-end/tutorial-canciones/src/app/cancion/cancion-list/cancion-list.component.html
+++ b/front-end/tutorial-canciones/src/app/cancion/cancion-list/cancion-list.component.html
@@ -27,10 +27,18 @@
                             <td mat-cell *matCellDef="let element" scope="row"> {{element.titulo}} </td>
                         </ng-container>
 
+                        <ng-container matColumnDef="share">
+                          <th mat-header-cell *matHeaderCellDef scope="col"></th>
+                          <td mat-cell *matCellDef="let element" scope="row">
+                              <button type="button" class="btn btn-outline-info me-2" (click)="openDialog(element)" title="Compartir canción"><i class="bi bi-share"></i></button>
+                          </td>
+                        </ng-container>
+
                         <ng-container matColumnDef="duracion">
                             <th mat-header-cell *matHeaderCellDef scope="col"> Duración </th>
                             <td mat-cell *matCellDef="let element" scope="row"> {{element.minutos | duracion }}:{{element.segundos | duracion}} </td>
                         </ng-container>
+
 
                         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                         <tr mat-row *matRowDef="let row; columns: displayedColumns;; let i = index" [ngClass]="{'selected': i === indiceSeleccionado}" (click)="onSelect(row,i)"></tr>
