--- a/front-end/tutorial-canciones/src/app/cancion/cancion-detail/cancion-detail.component.html
+++ b/front-end/tutorial-canciones/src/app/cancion/cancion-detail/cancion-detail.component.html
@@ -71,14 +71,8 @@
       </div>
 
       <div class="col-12">
-          <table mat-table [dataSource]="cancion.compartidos" class="mat-elevation-z8" *ngIf="cancion.compartidos.length > 0" summary="Lista de usuarios">
+          <table mat-table [dataSource]="mostrarCompartidosCancion"class="mat-elevation-z8" summary="Lista de usuarios" aria-describedby="colecName">
 a
-              <!-- Position Column -->
-              <ng-container matColumnDef="index">
-                  <th mat-header-cell *matHeaderCellDef scope="col"> No. </th>
-                  <td mat-cell *matCellDef="let element; let i = index;" scope="row"> {{i + 1}} </td>
-              </ng-container>
-
               <!-- Name Column -->
               <ng-container matColumnDef="nombre">
                   <th mat-header-cell *matHeaderCellDef scope="col"> Usuario </th>
