--- a/front-end/tutorial-canciones/src/app/cancion/cancion-list/cancion-list.component.html
+++ b/front-end/tutorial-canciones/src/app/cancion/cancion-list/cancion-list.component.html
@@ -24,14 +24,9 @@
 
                         <ng-container matColumnDef="titulo">
                             <th mat-header-cell *matHeaderCellDef scope="col"> Canción </th>
-                            <td mat-cell *matCellDef="let element" scope="row"> {{element.titulo}} </td>
-                        </ng-container>
-
-                        <ng-container matColumnDef="share">
-                          <th mat-header-cell *matHeaderCellDef scope="col"></th>
-                          <td mat-cell *matCellDef="let element" scope="row">
-                              <button type="button" class="btn btn-outline-info me-2" (click)="openDialog(element)" title="Compartir canción"><i class="bi bi-share"></i></button>
-                          </td>
+                            <td mat-cell *matCellDef="let element" scope="row">
+                            <mat-icon *ngIf="element.descripcion === 'False'">send</mat-icon>
+                              {{element.titulo}} </td>
                         </ng-container>
 
                         <ng-container matColumnDef="duracion">
@@ -39,6 +34,12 @@
                             <td mat-cell *matCellDef="let element" scope="row"> {{element.minutos | duracion }}:{{element.segundos | duracion}} </td>
                         </ng-container>
 
+                        <ng-container matColumnDef="share">
+                          <th mat-header-cell *matHeaderCellDef scope="col"></th>
+                          <td mat-cell *matCellDef="let element" scope="row">
+                              <button *ngIf="element.descripcion === 'True'" type="button" class="btn btn-outline-info me-2" (click)="openDialog(element)" title="Compartir canción"><i class="bi bi-share"></i></button>
+                          </td>
+                        </ng-container>
 
                         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                         <tr mat-row *matRowDef="let row; columns: displayedColumns;; let i = index" [ngClass]="{'selected': i === indiceSeleccionado}" (click)="onSelect(row,i)"></tr>
