--- a/front-end/tutorial-canciones/src/app/cancion/cancion-detail/cancion-detail.component.html
+++ b/front-end/tutorial-canciones/src/app/cancion/cancion-detail/cancion-detail.component.html
@@ -11,6 +11,7 @@
             <label class="fs-4 fw-bold">Canción: {{cancion?.titulo}}</label>
             <button *ngIf="cancion" type="button" class="btn btn-outline-success ms-3 me-2" (click)="goToEdit()" title="Editar canción"><i class="bi bi-pencil-square"></i></button>
             <button *ngIf="cancion" type="button" class="btn btn-outline-danger me-1" (click)="eliminarCancion()" title="Eliminar canción"><i class="bi bi-trash-fill"></i></button>
+            <button *ngIf="cancion.propia === 'True'" type="button" class="btn btn-outline-info me-2" (click)="openDialog(cancion)" title="Compartir canción"><i class="bi bi-share"></i></button>
         </div>
     </div>
 
@@ -40,7 +41,7 @@
 
             <table mat-table [dataSource]="cancion.albumes" class="mat-elevation-z8" summary="Lista de álbumes">
 
-                <!-- Name Column -->
+              <!-- Name Column -->
                 <ng-container matColumnDef="titulo">
                     <th mat-header-cell *matHeaderCellDef scope="col"> Título </th>
                     <td mat-cell *matCellDef="let element" scope="row"> {{element.titulo}} </td>
@@ -71,12 +72,12 @@
       </div>
 
       <div class="col-12">
-          <table mat-table [dataSource]="mostrarCompartidosCancion"class="mat-elevation-z8" summary="Lista de usuarios" aria-describedby="colecName">
+          <table mat-table [dataSource]="mostrarCompartidosCancion" class="mat-elevation-z8" summary="Lista de usuarios" aria-describedby="colecName">
 a
               <!-- Name Column -->
               <ng-container matColumnDef="nombre">
                   <th mat-header-cell *matHeaderCellDef scope="col"> Usuario </th>
-                  <td mat-cell *matCellDef="let element" scope="row"> {{ element }} </td>
+                  <td mat-cell *matCellDef="let element" scope="row"> {{ element.nombre }} </td>
               </ng-container>
 
               <tr mat-header-row *matHeaderRowDef="displayedColumnsCompartidos"></tr>
